<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:orderInCategory="1"
        android:title="@string/bottom_nav_title_dashboard"
        app:showAsAction="always" />

    <item
        android:id="@+id/videoListFragment"
        android:icon="@drawable/ic_ondemand_video_black_24dp"
        android:orderInCategory="2"
        android:title="@string/bottom_nav_title_videos"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/storeFragment"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:orderInCategory="2"
        android:title="@string/bottom_nav_title_store"
        app:showAsAction="ifRoom" />

</menu>