<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ahmedtikiwa.liam.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/login_hero"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_hero_height"
            android:background="@drawable/child_lockdown"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_vertical"
                android:gravity="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:srcCompat="@drawable/liam_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_vertical"
                android:gravity="center"
                android:text="@string/subtitle_login"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_vertical_half"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:background="@android:color/white"
            android:hint="@string/email_field_hint"
            android:paddingTop="@dimen/margin_vertical_quarter"
            android:paddingBottom="@dimen/margin_vertical_quarter"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_hero">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:background="@android:color/white"
            android:hint="@string/password_field_hint"
            android:paddingTop="@dimen/margin_vertical_quarter"
            android:paddingBottom="@dimen/margin_vertical_quarter"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_email_field">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/login_footer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_vertical_half"
            android:background="@color/listBackgroundColor"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password_field">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginStart="@dimen/margin_horizontal_double"
                android:layout_marginTop="@dimen/margin_vertical_half"
                android:layout_marginEnd="@dimen/margin_horizontal_double"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{() -> viewModel.onLoginClick()}"
                android:text="@string/login_button_text"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_vertical"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:onClick="@{() -> viewModel.onSignUpClick()}"
                android:text="@string/login_signup_hint"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>